# TestBase-Research

./: .gitignore  CONTRIBUTING.md  DEPLOY_TO_GITHUB.md  LICENSE  MGMT_Research_Process_Documentation.md  PIPELINE_IMPROVEMENTS.md  README.md  RECOMMENDED_RESEARCH_QUESTIONS.md  alphagenome_cancer_pipeline.py  discover_research_targets.py  enhancer_detection_pipeline.py  multi_mutation_pipeline.py  questions-to-answer.md  requirements.txt  research_pipeline.py  simple_enhancer_pipeline.py  simple_gene_discovery.py  test_improved_pipeline.py  test_multi_mutation_pipeline.py
alphagenome_agent/: .env.example  README.md  pyproject.toml  pytest.ini  run_tests.py  setup.py
alphagenome_agent/src/: __init__.py
alphagenome_agent/src/cli/: main.py
alphagenome_agent/src/clients/: __init__.py  alphagenome_client.py  cbioportal_client.py  genome.py
alphagenome_agent/src/core/: cache.py  config.py  logging.py  ontology.py  schemas.py
alphagenome_agent/src/examples/: run_enhancer_pipeline.py
alphagenome_agent/src/pipelines/: base.py  enhancer.py  promoter_enhancer.py
alphagenome_agent/src/reports/: chart_components.py  example_chart_usage.py  html_chartjs.py  html_chartjs_backup.py  html_chartjs_fixed.py  html_chartjs_probability_fix.py  professional_report_generator.py  regulatory_report_section.py  renderer.py  report_styles.py  reporter.py
alphagenome_agent/src/scoring/: aggregate.py  detectors.py  enhanced_detectors.py  enhancer_probability.py  enhancer_probability_scientific.py  heuristics.py  professional_scorer.py  (+1 more)
alphagenome_agent/tests/: README.md
(+47 files in other folders)
